--- a/supabase-nextjs/package.json
+++ b/supabase-nextjs/package.json
@@ -11,6 +11,7 @@
     "sync": "supabase db sync"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
